2007-02-09  Brian Gough  <bjg@network-theory.co.uk>

	* ellint.c (gsl_sf_ellint_F_e): do argument reduction for phi>pi/2
	(gsl_sf_ellint_E_e): do argument reduction for phi>pi/2
	(gsl_sf_ellint_P_e): do argument reduction for phi>pi/2
	(gsl_sf_ellint_D_e): do argument reduction for phi>pi/2
	(gsl_sf_ellint_Dcomp_e): added complete D integral
	(gsl_sf_ellint_Pcomp_e): added complete P integral

2007-01-31  Brian Gough  <bjg@network-theory.co.uk>

	* beta.c (gsl_sf_lnbeta_sgn_e): added to support calculations with
	negative a,b
	(gsl_sf_lnbeta_e): rewritten in terms of gsl_sf_lnbeta_sgn_e
	(gsl_sf_beta_e): handle negative a,b

	* gamma.c (gsl_sf_lngamma_sgn_e): make error calculations an exact
	copy of gsl_sf_lngamma_e (these functions could be merged to avoid
	duplication)

2007-01-29  Brian Gough  <bjg@network-theory.co.uk>

	* test_legendre.c (test_legendre): added extra test cases for
	underflow

2007-01-26  Brian Gough  <bjg@network-theory.co.uk>

	* expint.c (expint_E2_impl): handle x==0.0 as a special case
	(expint_E2_impl): corrected error term

	* gsl_sf_log.h: removed inline version of log

	* gsl_sf_exp.h: removed inline version of exp

2007-01-23  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_1F1.c (hyperg_1F1_1_series): increase accuracy by factor
	of 4 in sum, tighter convergence condition, increase error
	estimate to allow for accumulated roundoff
	(hyperg_1F1_1): use series when |x| > |b|
	(gsl_sf_hyperg_1F1_e): only use Kummer when |x| < 100 otherwise
	exponential takes extreme value

	* hyperg.c (gsl_sf_hyperg_1F1_series_e): allow 10000 iterations in
	series to extend valid range
	(gsl_sf_hyperg_1F1_series_e): increase accuracy by factor of 4 in
	sum, tighter convergence condition

2007-01-19  Brian Gough  <bjg@network-theory.co.uk>

	* laguerre.c (laguerre_large_n): use the second term in the
	asymptotic expansion from Slater, p.73.

2007-01-17  Brian Gough  <bjg@network-theory.co.uk>
